--- a/index.html
+++ b/index.html
@@ -1,24 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Letter</title>
+    <title>生日快乐</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 40px;
-            background-color: #f0f8ff;
+            background-color: #f9f9f9;
+            color: #333;
         }
         h1 {
             color: #ff4500;
+            text-align: center;
+        }
+        p {
+            line-height: 1.8;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .divider {
+            margin: 20px 0;
+            border-top: 1px solid #ddd;
         }
     </style>
 </head>
 <body>
-    <h1>Happy Birthday, [Friend's Name]!</h1>
-    <p>Dear [Friend's Name],</p>
-    <p>I hope this day brings you as much joy as you bring to everyone around you...</p>
-    <!-- Add the rest of your letter here -->
+    <h1>生日快乐！！🎂</h1>
+    <p>Here is your basic virtual cake</p>
+
+    <div class="section">
+        <p>我九月份就开始写这封信（为了避免拖延要先开始做重要的事情）（也是由于这个原因，我觉得电子版更好，可以直接发给你，我还可以像日记一样随时修改）(最重要的是，我无法在一个小时两个小时内写到所有的东西，因为很多时候就是无法记起来，只有突然想到了，才写下来然后随一段时间来丰富内容，所以像是：随机想法的合集，绝大多数关于你)，但还是没有头绪，那我想先告诉你关于你，about how amazing you are and how fortunate I am to have met you. 我可能会谈到各种分支和随机的主题，所以我也不知道会这封（电子）信会有多长... 所以慢慢看吧。</p>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="section">
+        <p>我觉得这似乎比单独的一封具有功能性的信更好，因为这封信更像日记，但是是交错地添加修改和删除了前前后后，而不是从上到下一气呵成。更符合我比较复杂拧巴的阐述方式&更加全面准确。虽然更难读。</p>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="section">
+        <p>关于生日，世界上有你而变成了更好的地方，我真心这样觉得，所以今天普天同庆！还不认识你的时候，我只觉得“她好漂亮”。现在看来......依然如此！Even more so！但我越了解你，美貌就越不值一提（似乎在很多情况下这句话比较奉承老套，但我仔细想了一下，两下，无数下，我真的这样想！）</p>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="section">
+        <p>我感觉似乎时间很快就大四了，和大一的新生聊天，似乎所有他们的问题都很自然又遥远，我似乎是选择性遗忘了很多东西才有了时间很快的错觉。有时候时间又非常慢，我隐约记得在伯克利的某一段时间似乎忘了时间流逝，很粘稠稳定的感觉。一段时间内是有越多的关键记忆点就会感觉时间过得更慢吗？</p>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="section">
+        <p>感觉人的变化实在是太大了，虽然我们从宇宙大爆炸开始就在时空中连续的存在，从星尘到泥土到肉体，为什么简单的原子大量聚集能形成你啊？但我学到，如果不持续观测一个合适的测量，那么缓慢的变化在两次观测间也可以表现得像剧变质变，我很好奇五年后你会变成什么样。一定也还是很可爱吧！！</p>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="section">
+        <p>你可以教我关于时间流逝感知的问题。但似乎这个认知是在表象上被外在的事物牵着走，而自主没有掌控。我觉得我很矛盾，虽然我在理智上坚信我们对任何事物都没有所谓的“掌控”，但似乎在巨大的不确定性中，一些小的确定性让我很快乐。对任何事物的确定的感觉，在我看来，都太稀有了。</p>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="section">
+        <p>我是一个会想很多的人，所以我会对不确定的事情更有超脱的看法，对少数确定的事情感到... 主要是感激和快乐。</p>
+        <p>The affection I feel for you is as certain as how humans love hope and stories. You might not believe it but this is the first time I have this level of certainty regarding my feelings towards someone (maybe besides my family), I'm glad it's positive. I hope this doesn't put pressure on you.</p>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="section">
+        <p>Ok 这不是一封情书 but... But I HAVE TO tell you more cause every chance is rare. You are very nice, kind, and strong. I like the complexity of your life, personality, and every bit of past trauma. I can't put it to words but I wish you could see yourself through my eyes, only then will you realize how special you are.</p>
+        <p>The possibility that I'll only see you a few times in a long time bothers me and makes me sad, but somehow it's not hard to accept.</p>
+    </div>
 </body>
 </html>
