--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
             color: #ffffff;
         }
         h1 {
-            color: #ff4500;
+            color: #ff69b4; /* Pink color */
             text-align: center;
         }
+
         p {
             line-height: 1.8;
         }
         .section {
-            margin-bottom: 80px;
+            margin-bottom: 60px;
         }
         .english {
             font-family: 'American Typewriter', monospace; /* Font for English text */
@@ -30,8 +31,8 @@
     </style>
 </head>
 <body>
-    <h1>生日快乐！！🎂</h1>
-    <p class="english">Here is your basic virtual cake</p>
+    <h1>生日快乐！！</h1>
+    <p class="english">Here is your basic virtual cake 🎂🎂🎂🎂🎂</p>
 
     <div class="section chinese">
         <p>我九月份就开始写这封信（为了避免拖延要先开始做重要的事情）（也是由于这个原因，我觉得电子版更好，可以直接发给你，我还可以像日记一样随时修改）(最重要的是，我无法在一个小时两个小时内写到所有的东西，因为很多时候就是无法记起来，只有突然想到了，才写下来然后随一段时间来丰富内容，所以像是：随机想法的合集，绝大多数关于你)，但还是没有头绪，那我想先告诉你关于你，about how amazing you are and how fortunate I am to have met you. 我可能会谈到各种分支和随机的主题，所以我也不知道会这封（电子）信会有多长... 所以慢慢看吧。</p>
