--- a/index.html
+++ b/index.html
@@ -6,18 +6,34 @@
     <link rel="icon" href="images/me-s.png" type="image/x-icon">
     <title>I'm feeling 22!!!</title>
     <style>
+        /* Styles for larger screens */
         body {
-            margin: 160px; /* Increased margin */
-            background-color: #001f3f; /* Dark blue background */
-            color: #ffffff;
+            margin: 0 auto; /* Center the content */
+            width: 70%; /* Make the content take up 70% of the screen width */
+            background-color: #001f3f; /* Dark blue */
+            color: #fff;
         }
+
         h1 {
-            color: #ff69b4; /* Pink color */
+            color: #ff69b4; /* Pink */
             text-align: center;
+            font-size: 3em; /* Larger font size for desktops */
         }
 
         p {
             line-height: 1.8;
+        }
+
+        /* Styles for smaller screens */
+        @media (max-width: 768px) {
+
+            h1 {
+                font-size: 2em; /* Smaller heading on phones */
+            }
+
+            p {
+                line-height: 1.5; /* Tighter spacing for mobile */
+            }
         }
         .section {
             margin-bottom: 60px;
