--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </style>
 </head>
 <body>
-    <h1>生日快乐！！</h1>
-    <p class="english">Here is your basic virtual cake 🎂🎂🎂🎂🎂</p>
+    <h1>Birthday letter for miss Alexie</h1>
+    <p class="english">生日快乐！！这里是你的电子蛋糕🎂🎂🎂🎂🎂</p>
 
     <div class="section chinese">
         <p>我九月份就开始写这封信（为了避免拖延要先开始做重要的事情）（也是由于这个原因，我觉得电子版更好，可以直接发给你，我还可以像日记一样随时修改）(最重要的是，我无法在一个小时两个小时内写到所有的东西，因为很多时候就是无法记起来，只有突然想到了，才写下来然后随一段时间来丰富内容，所以像是：随机想法的合集，绝大多数关于你)，但还是没有头绪，那我想先告诉你关于你，about how amazing you are and how fortunate I am to have met you. 我可能会谈到各种分支和随机的主题，所以我也不知道会这封（电子）信会有多长... 所以慢慢看吧。</p>
@@ -70,19 +70,28 @@
         <p>感觉人的变化实在是太大了，虽然我们从宇宙大爆炸开始就在时空中连续的存在，从星尘到泥土到肉体，为什么简单的原子大量聚集能形成你啊？但我学到，如果不持续观测一个合适的测量，那么缓慢的变化在两次观测间也可以表现得像剧变质变，我很好奇五年后你会变成什么样。一定也还是很可爱吧！！</p>
     </div>
 
-    <div class="section english">
-        <p>You can teach me about the perception of time passing. But it seems that this recognition is superficially led by external things, without self-control. I feel conflicted, although I firmly believe that we have no "control" over anything in any rational sense. However, some small certainties in this vast uncertainty make me happy.</p>
+    <div class="section chinese">
+        <p>你可以教我关于时间流逝感知的问题。但似乎这个认知是在表象上被外在的事物牵着走，而自主没有掌控。我觉得我很矛盾，虽然我在理智上坚信我们对任何事物都没有所谓的“掌控”，但似乎在巨大的不确定性中，一些小的确定性让我很快乐。对任何事物的确定的感觉，在我看来，都太稀有了。我是一个会想很多的人，所以我会对不确定的事情更有超脱的看法，对少数确定的事情感到... 主要是感激和快乐。</p>
+        <p>我时常觉得自己想要的太多。一天我翻开自己写的剧本，又想开始学习戏剧写作，另一天我又想起几周没认真学习法语西语，又开始刷油管，再一天惊觉自己是个学生，想到未来职业压力，感觉自己在科研、申请和数学上没有花足够的时间... 不知道你能不能感同身受，或许我们都是一样的，想要触及天空但又还远远未到。我不想成为一个涉猎广泛但各样都很烂的人，却又总怕错过了什么，你呢？</p>
     </div>
 
     <div class="section english">
-        <p>I am someone who thinks a lot, so I have a more detached view of uncertain things and feel mainly gratitude and happiness for the few certainties.</p>
-        <p>The affection I feel for you is as certain as how humans love hope and stories. You might not believe it, but this is the first time I have this level of certainty regarding my feelings towards someone (maybe besides my family), and I'm glad it's positive. I hope this doesn't put pressure on you.</p>
+        <p>The affection I feel for you is as certain as how humans love hope and stories (I'm paraphrasing Camus from French). You might not believe it but this is the first time I have this level of certainty regarding my feelings towards someone (maybe besides my family), I'm glad it's positive. Thinking of you brings a smile to my face!</p>
+        <p>I haven't seen you many times, but each time I do, I feel really happy and excited, days in advance—just like anticipating a long-awaited walk in the park with fresh air brushing through my hair. </p>
     </div>
 
     <div class="section english">
+        <p>Of course I've found myself thinking: does she like me? But that's useless and complicated, I feel like you do. It doesn't have to mean or result in anything. But I feel like, at least I hope, you do.</p>
         <p>Ok, this isn't a love letter, but... I HAVE TO tell you more because every chance is rare. You are very nice, kind, and strong. I like the complexity of your life, personality, and every bit of past trauma. I can't put it into words, but I wish you could see yourself through my eyes. Only then will you realize how special you are.</p>
         <p>The possibility that I'll only see you a few times in a long time bothers me and makes me sad, but somehow it's not hard to accept.</p>
         <p><a href="https://youtu.be/mB6RjSJewB8?si=qRj2A9sh6FjnLMIM" target="_blank">Here</a> is Lana singing happy birthday, and <a href="https://youtu.be/pJz2yXsmdFM?si=0TKAjhj4B2yPwbYg" target="_blank">here</a> is Coldplay! Finally, click <a href="https://goofyyz.github.io/22forAlexie/" target="_blank">here</a> for something light-hearted, if this letter seems tooooo genuine (I know)(I am proud.)(I am actually nervous sending you this)</p>
+    </div>
+
+    <div class="section english">
+        <p> really really really best wishes and love for your future life </p>
+        <p> who: from Z </p>
+        <p> when: 10.5.2024  </p>
+        <p> where: I'm at Hong Kong airport </p>
     </div>
 </body>
 </html>
