--- a/index.html
+++ b/index.html
@@ -75,22 +75,29 @@
         <p>我时常觉得自己想要的太多。一天我翻开自己写的剧本，又想开始学习戏剧写作，另一天我又想起几周没认真学习法语西语，又开始刷油管，再一天惊觉自己是个学生，想到未来职业压力，感觉自己在科研、申请和数学上没有花足够的时间... 不知道你能不能感同身受，或许我们都是一样的，想要触及天空但又还远远未到。我不想成为一个涉猎广泛但各样都很烂的人，却又总怕错过了什么，你呢？</p>
     </div>
 
+    <div class="section chinese">
+        <p>一直暗自认为“坠入爱河”是好老套的说法。但对你，真的是很贴切，是难以置信的简单和确定，而且是很多次。第一次是六月份见到你，在围在一圈的人里看到你，你和我打招呼，似乎也很惊喜。但也许是那之前？原本对那天没有任何期待，那天下午，或者是前一天，才是第一次知道你的名字以及你会在。没有任何明确的想法，但我确实决定在下午买了件带领的衬衫，借用了一点乐然的发胶，虽然头发和衣领怎么样都感觉不对，我还是想显得稍微正式认真一点。潜意识。第二次是在龙华寺，你看了好久地图后抬起头来问我，“啊现在去哪里啊？”，然后让我去找叫的车在哪里（literally在五十米以内）。第三次或许是在你蹲下来看小猫的时候。第四次或许是你不断说血腥玛丽好喝。第五次是你告诉我的那个下雪的梦。为什么会这么简单呢... 感觉你像是我的另一面。</p>
+    </div>
+
     <div class="section english">
         <p>The affection I feel for you is as certain as how humans love hope and stories (I'm paraphrasing Camus from French). You might not believe it but this is the first time I have this level of certainty regarding my feelings towards someone (maybe besides my family), I'm glad it's positive. Thinking of you brings a smile to my face!</p>
         <p>I haven't seen you many times, but each time I do, I feel really happy and excited, days in advance—just like anticipating a long-awaited walk in the park with fresh air brushing through my hair. </p>
     </div>
 
     <div class="section english">
-        <p>Ok, this isn't a love letter, but... I HAVE TO tell you more because every chance is rare. You are very nice, kind, and strong. I like the complexity of your life, personality, and every bit of past trauma. I can't put it into words, but I wish you could see yourself through my eyes. Only then will you realize how special you are.</p>
-        <p>The possibility that I'll only see you a few times in a long time bothers me and makes me sad, but somehow it's not hard to accept.</p>
+        <p>OK let me tell you more. You are very nice, kind, and strong. I like the complexity of your life, personality, and every bit of past trauma. I can't put it into words, but I wish you could see yourself through my eyes. Only then will you realize how special you are.</p>
+        <p>The possibility that I'll only see you a few times in a long time bothers me and makes me sad. But the whole thing is still beautiful. There's not a single thing about you that's ever ugly, not even a bit.</p>
+        <p>I don't glorify or fantasize about a perfect image of you, I like who you are. But I do dream about us spending time together, so many places I want to go together with you, shrines in Tokyo and Kyoto, the plateau and valleys of Tibet. New York would be fun, Europe also. So many movies I've watched over and over again, and I want to know how you feel about them.</p>
         <p><a href="https://youtu.be/mB6RjSJewB8?si=qRj2A9sh6FjnLMIM" target="_blank">Here</a> is Lana singing happy birthday, and <a href="https://youtu.be/pJz2yXsmdFM?si=0TKAjhj4B2yPwbYg" target="_blank">here</a> is Coldplay! Finally, click <a href="https://goofyyz.github.io/22forAlexie/" target="_blank">here</a> for something light-hearted, if this letter seems tooooo genuine (I know)(I am proud.)(I am actually nervous sending you this)</p>
     </div>
 
+    
+
     <div class="section english">
-        <p> really really really best wishes and love for your future life </p>
-        <p> who: from Z </p>
-        <p> when: 10.5.2024  </p>
-        <p> where: I'm at Hong Kong airport </p>
+        <p> Appreciation, beauty, respect, and HAPPY BIRTHDAY!</p>
+        <p> who? from Z </p>
+        <p> when? 10.5.2024  </p>
+        <p> where? I'm at Hong Kong airport </p>
     </div>
 </body>
 </html>
