--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         p {
             line-height: 1.8;
         }
+        
+        .divider {
+            margin: 20px 0;
+            border-top: 1px solid #ddd;
+        }
 
         /* Styles for smaller screens */
         @media (max-width: 768px) {
@@ -58,6 +63,8 @@
         <p>我觉得这似乎比单独的一封具有功能性的信更好，因为这封信更像日记，但是是交错地添加修改和删除了前前后后，而不是从上到下一气呵成。更符合我比较复杂拧巴的阐述方式&更加全面准确。虽然更难读。</p>
     </div>
 
+    <div class = "divider"></div>
+
     <div class="section chinese">
         <p>关于生日，世界上有你而变成了更好的地方，我真心这样觉得，所以今天普天同庆！还不认识你的时候，我只觉得“她好漂亮”。现在看来......依然如此！Even more so！但我越了解你，美貌就越不值一提（似乎在很多情况下这句话比较奉承老套，但我仔细想了一下，两下，无数下，我真的这样想！）</p>
     </div>
@@ -79,6 +86,7 @@
         <p>一直暗自认为“坠入爱河”是好老套的说法。但对你，真的是很贴切，是难以置信的简单和确定，而且是很多次。第一次是六月份见到你，在围在一圈的人里看到你，你和我打招呼，似乎也很惊喜。但也许是那之前？原本对那天没有任何期待，那天下午，或者是前一天，才是第一次知道你的名字以及你会在。没有任何明确的想法，但我确实决定在下午买了件带领的衬衫，借用了一点乐然的发胶，虽然头发和衣领怎么样都感觉不对，我还是想显得稍微正式认真一点。潜意识。第二次是在龙华寺，你看了好久地图后抬起头来问我，“啊现在去哪里啊？”，然后让我去找叫的车在哪里（literally在五十米以内）。第三次或许是在你蹲下来看小猫的时候。第四次或许是你不断说血腥玛丽好喝。第五次是你告诉我的那个下雪的梦。为什么会这么简单呢... 感觉你像是我的另一面。</p>
     </div>
 
+    <div class = "divider"></div>
     <div class="section english">
         <p>The affection I feel for you is as certain as how humans love hope and stories (I'm paraphrasing Camus from French). You might not believe it but this is the first time I have this level of certainty regarding my feelings towards someone (maybe besides my family), I'm glad it's positive. Thinking of you brings a smile to my face!</p>
         <p>I haven't seen you many times, but each time I do, I feel really happy and excited, days in advance—just like anticipating a long-awaited walk in the park with fresh air brushing through my hair. </p>
@@ -91,7 +99,7 @@
         <p><a href="https://youtu.be/mB6RjSJewB8?si=qRj2A9sh6FjnLMIM" target="_blank">Here</a> is Lana singing happy birthday, and <a href="https://youtu.be/pJz2yXsmdFM?si=0TKAjhj4B2yPwbYg" target="_blank">here</a> is Coldplay! Finally, click <a href="https://goofyyz.github.io/22forAlexie/" target="_blank">here</a> for something light-hearted, if this letter seems tooooo genuine (I know)(I am proud.)(I am actually nervous sending you this)</p>
     </div>
 
-    
+    <div class = "divider"></div>
 
     <div class="section english">
         <p> Appreciation, beauty, respect, and HAPPY BIRTHDAY!</p>
