--- a/index.html
+++ b/index.html
@@ -56,17 +56,23 @@
     <p class="english">生日快乐！！这里是你的电子蛋糕🎂🎂🎂🎂🎂</p>
 
     <div class="section chinese">
-        <p>我九月份就开始写这封信（为了避免拖延要先开始做重要的事情）（也是由于这个原因，我觉得电子版更好，可以直接发给你，我还可以像日记一样随时修改）(最重要的是，我无法在一个小时两个小时内写到所有的东西，因为很多时候就是无法记起来，只有突然想到了，才写下来然后随一段时间来丰富内容，所以像是：随机想法的合集，绝大多数关于你)，但还是没有头绪，那我想先告诉你关于你，about how amazing you are and how fortunate I am to have met you. 我可能会谈到各种分支和随机的主题，所以我也不知道会这封（电子）信会有多长... 所以慢慢看吧。</p>
+        <p>我九月份就开始写这封信（为了避免拖延要先开始做重要的事情）（也是由于这个原因，我觉得电子版更好，可以直接发给你，我还可以像日记一样随时修改）(最重要的是，我无法在一个小时两个小时内写到所有的东西，因为很多时候就是无法记起来，只有突然想到了，才写下来然后随一段时间来丰富内容，所以像是：随机想法的合集，很多关于你)，但还是没有头绪，那我想先告诉你关于你，about how amazing you are and how fortunate I am to have met you. 我可能会谈到各种分支和随机的主题，所以我也不知道会这封（电子）信会有多长... 所以慢慢看吧。</p>
     </div>
 
     <div class="section chinese">
-        <p>我觉得这似乎比单独的一封具有功能性的信更好，因为这封信更像日记，但是是交错地添加修改和删除了前前后后，而不是从上到下一气呵成。更符合我比较复杂拧巴的阐述方式&更加全面准确。虽然更难读。</p>
+        <p>我觉得这似乎比单独的一封具有功能性的信更好，因为这封信更像日记，但是是交错地添加修改和删除了前前后后，而不是从上到下一气呵成。更符合我比较复杂拧巴的阐述方式&更加全面准确。虽然更难读，因为没有任何目的，没有主题。</p>
+    </div>
+
+    <div class = "section chinese">
+        <p>一段（有点，但又很相关）题外话。但是这也是为什么许多电影的对话和发展并不合理。在短短的两个小时时间内，你很难把一段完整的对话展现，但在商业化的世界里，绝大多数观众不接受这种悬而未决的模糊和不完整性，人们普遍缺乏耐心且痴迷于结局。我觉得你有罕见的耐心，当我说“你很理性”，并无任何指责你不够多愁善感的意思，而是更多地关于耐心，并且我们对故事的非线性发展有大抵兼容的观点（“流动” be like）。所以大部分的电影都是剧情优先于对话，而在篇幅更长的小说和文学里往往对话和剧情并驾齐驱。</p>
+        <p>这也是为什么我和你提了好几次《爱在》三部曲 (Richard Linklater, Ethan Hawke, and Juile Delpy)，因为这是我第一次打开眼界，看到有人可以在戏剧结构上，将对话凌驾于剧情之上，同时又能保持吸引力。而这甚至与浪漫无关，对我来说，《爱在》更像是一种独特的讲故事和实际交流的方式。曲折、非线性、纠结但始终很美。</p>
+        <p>我不知道有没有和任何人说过，我很敬佩导演的工作，或许也有点想做导演。作家思考太多，优柔寡断，事实上更像我的性格（也许也像你），但好的导演需要是直觉、思考、对话和执行的综合体。</p>
     </div>
 
     <div class = "divider"></div>
 
     <div class="section chinese">
-        <p>关于生日，世界上有你而变成了更好的地方，我真心这样觉得，所以今天普天同庆！还不认识你的时候，我只觉得“她好漂亮”。现在看来......依然如此！Even more so！但我越了解你，美貌就越不值一提（似乎在很多情况下这句话比较奉承老套，但我仔细想了一下，两下，无数下，我真的这样想！）</p>
+        <p>关于生日，世界上有你而变成了更好的地方，真心这样觉得，所以今天普天同庆！还不认识你的时候，我只觉得“她好漂亮”。现在看来......依然如此！Even more so！但我越了解你，美貌就越不值一提（似乎在很多情况下这句话比较奉承老套，但我仔细想了一下，两下，无数下，我真的这样想！）</p>
     </div>
 
     <div class="section chinese">
@@ -83,7 +89,7 @@
     </div>
 
     <div class="section chinese">
-        <p>一直暗自认为“坠入爱河”是好老套的说法。但对你，真的是很贴切，是难以置信的简单和确定，而且是很多次。第一次是六月份见到你，在围在一圈的人里看到你，你和我打招呼，似乎也很惊喜。但也许是那之前？原本对那天没有任何期待，那天下午，或者是前一天，才是第一次知道你的名字以及你会在。没有任何明确的想法，但我确实决定在下午买了件带领的衬衫，借用了一点乐然的发胶，虽然头发和衣领怎么样都感觉不对，我还是想显得稍微正式认真一点。潜意识。第二次是在龙华寺，你看了好久地图后抬起头来问我，“啊现在去哪里啊？”，然后让我去找叫的车在哪里（literally在五十米以内）。第三次或许是在你蹲下来看小猫的时候。第四次或许是你不断说血腥玛丽好喝。第五次是你告诉我的那个下雪的梦。为什么会这么简单呢... 感觉你像是我的另一面。</p>
+        <p>一直暗自认为“坠入爱河”是好老套的说法。但对你，真的是很贴切，是难以置信的简单和确定，而且是很多次。第一次是六月份见到你，在围在一圈的人里看到你，你和我打招呼，似乎也很惊喜。但也许是那之前？原本对那天没有任何期待，那天下午，或者是前一天，才是第一次知道你的名字以及你会在。没有任何明确的想法，但我确实决定在下午买了件带领的衬衫，借用了一点乐然的发胶，虽然头发和衣领怎么样都感觉不对，我还是想显得稍微正式认真一点。潜意识。第二次是在龙华寺，你看了好久地图后抬起头来问我，“啊现在去哪里啊？”，然后让我去找叫的车在哪里（literally在五十米以内）。第三次或许是在你蹲下来看小猫的时候。第四次或许是你不断说血腥玛丽好喝。第五次是你告诉我的那个下雪的梦。为什么会这么简单呢... 感觉你像是我的另一面。好吧，不用多思考和比较，just believe what I said.</p>
     </div>
 
     <div class = "divider"></div>
