--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>一段（有点，但又很相关）题外话。但是这也是为什么许多电影的对话和发展并不合理。在短短的两个小时时间内，你很难把一段完整的对话展现，但在商业化的世界里，绝大多数观众不接受这种悬而未决的模糊和不完整性，人们普遍缺乏耐心且痴迷于结局。我觉得你有罕见的耐心，当我说“你很理性”，并无任何指责你不够多愁善感的意思，而是更多地关于耐心（虽然你说自己无法延迟满足，但似乎是小事，我不想又过度分析，只是觉得你和我很有耐心）。并且我们对故事的非线性发展有大抵兼容的观点（“流动” be like）。所以大部分的电影都是剧情优先于对话，而在篇幅更长的小说和文学里往往对话和剧情并驾齐驱。</p>
         <p>这也是为什么我和你提了好几次《爱在》三部曲 (Richard Linklater, Ethan Hawke, and Juile Delpy)，因为这是我第一次打开眼界，看到有人可以在戏剧结构上，将对话凌驾于剧情之上，同时又能保持吸引力。而这甚至与浪漫无关，对我来说，《爱在》更像是一种独特的讲故事和实际交流的方式。曲折、非线性、纠结但始终很美。</p>
         <p>我不知道有没有和任何人说过，我很敬佩导演的工作，或许也有点想做导演。作家思考太多，优柔寡断，事实上更像我的性格（也许也像你），但好的导演需要是直觉、思考、对话和执行的综合体。文学家➕哲学家➕执行力，对我来说，调制出最好的导演。</p>
-        <p>我特别喜欢Richard Linklater，你之后可以去看他的这一段关于耐心的<a href="https://youtu.be/bkVQAEtOIE4?si=_6x-Z5OjWNHU1Rvf" target="_blank">视频</a>。</p>
+        <p>我特别喜欢Richard Linklater，你之后可以去看他的这一段关于耐心的<a href="https://youtu.be/bkVQAEtOIE4?si=_6x-Z5OjWNHU1Rvf" target="_blank">视频</a>。（才意识到他的姓是Link later. Link later!）</p>
         
     </div>
 
