--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class = "divider"></div>
 
     <div class="section english">
-        <p> Appreciation, beauty, respect, and HAPPY BIRTHDAY!</p>
+        <p> Much appreciation... and HAPPY BIRTHDAY!</p>
         <p> who? from Z </p>
         <p> when? 10.5.2024  </p>
         <p> where? I'm at Hong Kong airport </p>
