--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
     <h1>Birthday letter for miss Alexie</h1>
     <p class="english">生日快乐！！这里是你的电子蛋糕🎂🎂🎂🎂🎂</p>
 
+    <!--
+    congratulations if you found this comment containing the HIDDEN TEXT! 
+    
+    一直暗自认为“坠入爱河”是好老套的说法。但对你，真的是很贴切，是难以置信的简单和确定，而且是很多次。
+    第一次是六月份见到你，在围在一圈的人里看到你，你和我打招呼，似乎也很惊喜。但也许是那之前？原本对那天没有任何期待，那天下午，或者是前一天，才是第一次知道你的名字以及你会在。
+    没有任何明确的想法，但我确实决定在下午买了件带领的衬衫，借用了一点乐然的发胶，虽然头发和衣领怎么样都感觉不对，我还是想显得稍微正式认真一点。潜意识。
+    第二次是在龙华寺，你看了好久地图后抬起头来问我，“啊现在去哪里啊？”，然后让我去找叫的车在哪里（literally在五十米以内）。第三次或许是在你蹲下来看小猫的时候。第四次或许是你不断说血腥玛丽好喝。
+    第五次是你告诉我的那个下雪的梦。为什么会这么简单呢... 感觉你像是我的另一面。好吧，不用多思考和比较，just believe what I said.
+    You might not believe it but this is the first time I have this level of certainty regarding my feelings towards someone (maybe besides my family), I'm glad it's positive. 
+    -->
+
     <div class="section chinese">
         <p>我九月份就开始写这封信（为了避免拖延要先开始做重要的事情）（也是由于这个原因，我觉得电子版更好，可以直接发给你，我还可以像日记一样随时修改）(最重要的是，我无法在一个小时两个小时内写到所有的东西，因为很多时候就是无法记起来，只有突然想到了，才写下来然后随一段时间来丰富内容，所以像是：随机想法的合集，很多关于你)，但还是没有头绪，那我想先告诉你关于你，about how amazing you are and how fortunate I am to have met you. 我可能会谈到各种分支和随机的主题，所以我也不知道会这封（电子）信会有多长... 所以慢慢看吧。</p>
     </div>
@@ -74,7 +85,7 @@
     <div class = "divider"></div>
 
     <div class="section chinese">
-        <p>关于生日，世界上有你而变成了更好的地方，真心这样觉得，所以今天普天同庆！还不认识你的时候，我只觉得“她好漂亮”。现在看来......依然如此！Even more so！但我越了解你，美貌就越不值一提（似乎在很多情况下这句话比较奉承老套，但我仔细想了一下，两下，无数下，我真的这样想！）</p>
+        <p>关于生日，the world is better with you here，真心这样觉得，普天同庆！还不认识你的时候，我只觉得“她好漂亮”。现在看来......依然如此！Even more so！但我越了解你，美貌就越不值一提（似乎在很多情况下这句话比较奉承老套... people say <em>value a good heart over a pretty face.</em> But you have both...）</p>
     </div>
 
     <div class="section chinese">
@@ -87,25 +98,24 @@
 
     <div class="section chinese">
         <p>你可以教我关于时间流逝感知的问题。但似乎这个认知是在表象上被外在的事物牵着走，而自主没有掌控。我觉得我很矛盾，虽然我在理智上坚信我们对任何事物都没有所谓的“掌控”，但似乎在巨大的不确定性中，一些小的确定性让我很快乐。对任何事物的确定的感觉，在我看来，都太稀有了。我是一个会想很多的人，所以我会对不确定的事情更有超脱的看法，对少数确定的事情感到... 主要是感激和快乐。</p>
-        <p>我时常觉得自己想要的太多。一天我翻开自己写的剧本，又想开始学习戏剧写作，另一天我又想起几周没认真学习法语西语，又开始刷油管，再一天惊觉自己是个学生，想到未来职业压力，感觉自己在科研、申请和数学上没有花足够的时间... 不知道你能不能感同身受，或许我们都是一样的，想要触及天空但又还远远未到。我不想成为一个涉猎广泛但各样都很烂的人，却又总怕错过了什么，你呢？</p>
+        <p>我时常觉得自己想要的太多。一天我翻开自己写的剧本，又想开始学习戏剧写作，另一天我又想起几周没认真学习法语西语，又开始刷油管，再一天惊觉自己是个学生，想到未来职业压力，感觉自己在科研、申请和学术上没有花足够的时间... 不知道你能不能感同身受，或许我们都是一样的，想要触及天空但又还远远未到。我不想成为一个涉猎广泛但各样都很烂的人，却又总怕错过了什么，你呢？</p>
     </div>
 
-    <div class="section chinese">
-        <p>一直暗自认为“坠入爱河”是好老套的说法。但对你，真的是很贴切，是难以置信的简单和确定，而且是很多次。第一次是六月份见到你，在围在一圈的人里看到你，你和我打招呼，似乎也很惊喜。但也许是那之前？原本对那天没有任何期待，那天下午，或者是前一天，才是第一次知道你的名字以及你会在。没有任何明确的想法，但我确实决定在下午买了件带领的衬衫，借用了一点乐然的发胶，虽然头发和衣领怎么样都感觉不对，我还是想显得稍微正式认真一点。潜意识。第二次是在龙华寺，你看了好久地图后抬起头来问我，“啊现在去哪里啊？”，然后让我去找叫的车在哪里（literally在五十米以内）。第三次或许是在你蹲下来看小猫的时候。第四次或许是你不断说血腥玛丽好喝。第五次是你告诉我的那个下雪的梦。为什么会这么简单呢... 感觉你像是我的另一面。好吧，不用多思考和比较，just believe what I said.</p>
-    </div>
+
 
     <div class = "divider"></div>
     <div class="section english">
-        <p>The affection I feel for you is as certain as how humans love hope and stories (I'm paraphrasing Camus from French). You might not believe it but this is the first time I have this level of certainty regarding my feelings towards someone (maybe besides my family), I'm glad it's positive. Thinking of you brings a smile to my face!</p>
+        <p>As for you, the affection is as certain as how humans love hope and stories (I'm paraphrasing Camus from French). Thinking of you brings a smile to my face!</p>
         <p>I haven't seen you many times, but each time I do, I feel really happy and excited, days in advance—just like anticipating a long-awaited walk in the park with fresh air brushing through my hair. </p>
     </div>
 
     <div class="section english">
         <p>OK let me tell you more. You are very nice, kind, and strong. I like the complexity of your life, personality, and every bit of past trauma. I can't put it into words, but I wish you could see yourself through my eyes. Only then will you realize how special you are.</p>
-        <p>The possibility that I'll only see you a few times in a long time bothers me and makes me sad. But the whole thing is still beautiful. There's not a single thing about you that's ever ugly, not even a bit.</p>
-        <p>I don't glorify or fantasize about a perfect image of you, I like who you are. But I do dream about us spending time together, so many places I want to go together with you, shrines in Tokyo and Kyoto, the plateau and valleys of Tibet. New York would be fun, Europe also. So many movies I've watched over and over again, and I want to know how you feel about them. I want to go to Coldplay concerts with you, I want to pick you up from the airport and greet you with flowers. And more.</p>
+        <p>The possibility that I'll only see you a few times in a long time bothers me and makes me sad. But hey, the big picture, the grand view, still beautiful. There's not a single thing that's ugly.</p>
+        <p>I don't glorify or fantasize about a perfect image of you, I like who you are. But I do dream about us spending time together (come on, it doesn't hurt to daydream romantic stuff)! So many movies I've watched over and over again, and I want to know how you feel about them. I want to go to Coldplay concerts with you, I want to pick you up from the airport and greet you with flowers. And more.</p>
         <p>We are interesting people, we will never run out of possibilities. You just turned 22 but your life just started, actually, at any given point, it's always a new day.</p>
         <p>We are inexhaustible. Immensità. That's also the best wish I can give you! Be inexhaustible, the opposite of any kind of commodity.</p>
+        <p>You've taught me a lot by the way! Directly or indirectly.
         <p><a href="https://youtu.be/mB6RjSJewB8?si=qRj2A9sh6FjnLMIM" target="_blank">Here</a> is Lana singing happy birthday, and <a href="https://youtu.be/pJz2yXsmdFM?si=0TKAjhj4B2yPwbYg" target="_blank">here</a> is Coldplay! Finally, click <a href="https://goofyyz.github.io/22forAlexie/" target="_blank">here</a> for something light-hearted, if this letter seems tooooo genuine (I know)(I am proud.)(I am actually nervous sending you this)</p>
     </div>
 
@@ -114,8 +124,12 @@
     <div class="section english">
         <p> Much appreciation... and HAPPY BIRTHDAY!</p>
         <p> who? from Z </p>
-        <p> when? 10.5.2024  </p>
-        <p> where? I'm at Hong Kong airport </p>
+        <p> when? started on some random day in Sept and finished on 10.5.2024</p>
+        <p> where? hint: planes take off here.</p>
+    </div>
+
+    <div class="section english">
+        <p> One last thing... here is a tiny mystery to solve... I've written stuff and deleted them (commented them out actually). Technically you have enough information, and just need a bit technical wit to find those hidden texts...</p>
     </div>
 </body>
 </html>
