--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="section chinese">
-        <p>我觉得这似乎比单独的一封具有功能性的信更好，因为这封信更像日记，但是是交错地添加修改和删除了前前后后，而不是从上到下一气呵成。更符合我比较复杂拧巴的阐述方式&更加全面准确。虽然更难读，因为没有任何目的，没有主题。</p>
+        <p>我觉得这比单独的一封功能性的信更好，因为更像日记，但是是交错地添加修改和删除了前前后后，而不是从上到下一气呵成。更符合我比较复杂拧巴的阐述方式&更加全面准确。虽然更难读，因为没有任何目的，没有主题（所以这就是我讲废话的理由啊！！）。</p>
     </div>
 
     <div class = "section chinese">
@@ -93,12 +93,13 @@
     </div>
 
     <div class="section chinese">
-        <p>感觉人的变化实在是太大了，虽然我们从宇宙大爆炸开始就在时空中连续的存在，从星尘到泥土到肉体，为什么简单的原子大量聚集能形成你啊？但我学到，如果不持续观测一个合适的测量，那么缓慢的变化在两次观测间也可以表现得像剧变质变，我很好奇五年后你会变成什么样。一定也还是很可爱吧！！</p>
+        <p>感觉人的变化实在是太大了，虽然我们从宇宙大爆炸开始就在时空中连续的存在，从星尘到泥土到肉体，简单的原子大量聚集能形成一些可爱的人类（也有好多不可爱的）！但我学到，如果不持续观测一个合适的测量，那么缓慢的变化在两次观测间也可以表现得像剧变质变，我很好奇五年后我们都会变成什么样。一定也还是很可爱吧！！</p>
     </div>
 
     <div class="section chinese">
         <p>你可以教我关于时间流逝感知的问题。但似乎这个认知是在表象上被外在的事物牵着走，而自主没有掌控。我觉得我很矛盾，虽然我在理智上坚信我们对任何事物都没有所谓的“掌控”，但似乎在巨大的不确定性中，一些小的确定性让我很快乐。对任何事物的确定的感觉，在我看来，都太稀有了。我是一个会想很多的人，所以我会对不确定的事情更有超脱的看法，对少数确定的事情感到... 主要是感激和快乐。</p>
-        <p>我时常觉得自己想要的太多。一天我翻开自己写的剧本，又想开始学习戏剧写作，另一天我又想起几周没认真学习法语西语，又开始刷油管，再一天惊觉自己是个学生，想到未来职业压力，感觉自己在科研、申请和学术上没有花足够的时间... 不知道你能不能感同身受，或许我们都是一样的，想要触及天空但又还远远未到。我不想成为一个涉猎广泛但各样都很烂的人，却又总怕错过了什么，你呢？</p>
+        <p>我时常觉得自己想要的太多。一天我翻开自己写的剧本，又想开始学习戏剧写作，另一天我又想起几周没认真学习法语西语，又开始刷油管，再一天惊觉自己是个学生，想到未来职业压力，感觉自己在科研、申请和学术上没有花足够的时间... 不知道你能不能感同身受，或许我们都是一样的，想要触及天空但又还远远未到。我不想成为一个涉猎广泛但各样都很烂的人，却又总怕错过了什么，你呢？(update: 我现在又觉得自己得赶紧去赚钱了... ，但永远停不下来，几个小时内不做点什么就心急火燎...)</p>
+        <p>不知道你是否有这种感觉：对明天，对下一个月、三个月、一年会发生什么都感到非常兴奋，就是一种很有希望的状态... 大家都有许多幻想，大的小的，万一其中一些真的实现了呢？</p>
     </div>
 
 
@@ -107,6 +108,7 @@
     <div class="section english">
         <p>As for you, the affection is as certain as how humans love hope and stories (I'm paraphrasing Camus from French). Thinking of you brings a smile to my face!</p>
         <p>I haven't seen you many times, but each time I do, I feel really happy and excited, days in advance—just like anticipating a long-awaited walk in the park with fresh air brushing through my hair. </p>
+        <p>I believe that we are simply what we eat, who and what we interact with (it's like we take pieces of the people we are close with and they, quite directly, form our thought processes, world views and personalities). So of course, many thanks to you for being such a positive impact!
     </div>
 
     <div class="section english">
@@ -115,21 +117,30 @@
         <p>I don't glorify or fantasize about a perfect image of you, I like who you are. But I do dream about us spending time together (come on, it doesn't hurt to daydream romantic stuff)! So many movies I've watched over and over again, and I want to know how you feel about them. I want to go to Coldplay concerts with you, I want to pick you up from the airport and greet you with flowers. And more.</p>
         <p>We are interesting people, we will never run out of possibilities. You just turned 22 but your life just started, actually, at any given point, it's always a new day.</p>
         <p>We are inexhaustible. Immensità. That's also the best wish I can give you! Be inexhaustible, the opposite of any kind of commodity.</p>
-        <p>You've taught me a lot by the way! Directly or indirectly.
+        <p>You've taught me a lot by the way! Directly or indirectly.</p>
+        <p>You asked me if there is a commitment in this relationship... I just wanna say I really like you and I will not pressure you, so really, let's take it easy... (hug)</p>
         <p><a href="https://youtu.be/mB6RjSJewB8?si=qRj2A9sh6FjnLMIM" target="_blank">Here</a> is Lana singing happy birthday, and <a href="https://youtu.be/pJz2yXsmdFM?si=0TKAjhj4B2yPwbYg" target="_blank">here</a> is Coldplay! Finally, click <a href="https://goofyyz.github.io/22forAlexie/" target="_blank">here</a> for something light-hearted, if this letter seems tooooo genuine (I know)(I am proud.)(I am actually nervous sending you this)</p>
     </div>
 
     <div class = "divider"></div>
 
     <div class="section english">
+        <p> Ok I read what I wrote down and not all of them make sense to me (but! I've decided to keep most of the stuff I wrote)... But one takeaway: I'm really fortunate to have met you! I am proud of who you are and optimistic about who you will be!</p>
         <p> Much appreciation... and HAPPY BIRTHDAY!</p>
         <p> who? from Z </p>
         <p> when? started on some random day in Sept and finished on 10.5.2024</p>
         <p> where? hint: planes take off here.</p>
     </div>
 
+    <div class = "divider"></div>
+
     <div class="section english">
         <p> One last thing... here is a tiny mystery to solve... I've written stuff and deleted them (commented them out actually). Technically you have enough information, and just need a bit technical wit to find those hidden texts...</p>
     </div>
+
+     <div class="section chinese">
+        <p> 能读到这里是蛮厉害的... 菜都凉了他还在抽象地表达... I'll stop here.</p>
+    </div>
+
 </body>
 </html>
