--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <div class="section chinese">
         <p>你可以教我关于时间流逝感知的问题。但似乎这个认知是在表象上被外在的事物牵着走，而自主没有掌控。我觉得我很矛盾，虽然我在理智上坚信我们对任何事物都没有所谓的“掌控”，但似乎在巨大的不确定性中，一些小的确定性让我很快乐。对任何事物的确定的感觉，在我看来，都太稀有了。我是一个会想很多的人，所以我会对不确定的事情更有超脱的看法，对少数确定的事情感到... 主要是感激和快乐。</p>
-        <p>我时常觉得自己想要的太多。一天我翻开自己写的剧本，又想开始学习戏剧写作，另一天我又想起几周没认真学习法语西语，又开始刷油管，再一天惊觉自己是个学生，想到未来职业压力，感觉自己在科研、申请和学术上没有花足够的时间... 不知道你能不能感同身受，或许我们都是一样的，想要触及天空但又还远远未到。我不想成为一个涉猎广泛但各样都很烂的人，却又总怕错过了什么，你呢？(update: 我现在又觉得自己得赶紧去赚钱了... ，但永远停不下来，几个小时内不做点什么就心急火燎...)</p>
+        <p>我时常觉得自己想要的太多。一天我翻开自己写的剧本，又想开始学习戏剧写作，另一天我又想起几周没认真学习法语西语，又开始刷油管，再一天惊觉自己是个学生，想到未来职业压力，感觉自己在科研、申请和学术上没有花足够的时间... 不知道你能不能感同身受，或许我们都是一样的，想要触及天空但又还远远未到。我不想成为一个涉猎广泛但各样都很烂的人，却又总怕错过了什么，你呢？(update: 我现在又觉得自己得赶紧去赚钱了... 虽然我表面上很放松，但永远停不下来，实际总是有点焦虑，几个小时内不做点什么就心急火燎...)</p>
         <p>不知道你是否有这种感觉：对明天，对下一个月、三个月、一年会发生什么都感到非常兴奋，就是一种很有希望的状态... 大家都有许多幻想，大的小的，万一其中一些真的实现了呢？</p>
     </div>
 
@@ -119,7 +119,7 @@
         <p>We are inexhaustible. Immensità. That's also the best wish I can give you! Be inexhaustible, the opposite of any kind of commodity.</p>
         <p>You've taught me a lot by the way! Directly or indirectly.</p>
         <p>You asked me if there is a commitment in this relationship... I just wanna say I really like you and I will not pressure you, so really, let's take it easy... (hug)</p>
-        <p><a href="https://youtu.be/mB6RjSJewB8?si=qRj2A9sh6FjnLMIM" target="_blank">Here</a> is Lana singing happy birthday, and <a href="https://youtu.be/pJz2yXsmdFM?si=0TKAjhj4B2yPwbYg" target="_blank">here</a> is Coldplay! Finally, click <a href="https://goofyyz.github.io/22forAlexie/" target="_blank">here</a> for something light-hearted, if this letter seems tooooo genuine (I know)(I am proud.)(I am actually nervous sending you this)</p>
+        <p><a href="https://youtu.be/mB6RjSJewB8?si=qRj2A9sh6FjnLMIM" target="_blank">Here</a> is Lana singing happy birthday, and <a href="https://youtu.be/pJz2yXsmdFM?si=0TKAjhj4B2yPwbYg" target="_blank">here</a> is Coldplay! Finally, click <a href="https://goofyyz.github.io/22forAlexie/" target="_blank">here</a> for something light-hearted (I followed a template for this because I didn't know how to make one myself... I'm not a CS student), if this letter seems tooooo genuine (I know)(I am proud.)(I am actually nervous sending you this)</p>
     </div>
 
     <div class = "divider"></div>
